--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+<div class="verticle-spacer"></div> 
 <div class="search-container">
 	<input type="text" name="fruit" id="fruit" placeholder="Search fruit 🍎">
 	<div class="suggestions">
 		<ul></ul>
 	</div>
 </div>
-<!-- partial -->
   <script  src="./script.js"></script>
 
 </body>
